--- a/public/styles.css
+++ b/public/styles.css
@@ -38,6 +38,7 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
+  
 }
 
 .ide-container {
@@ -76,7 +77,6 @@ body {
   top: 0;
   z-index: 1000;
 }
-
 
 .nav-menu {
   list-style-type: none;
@@ -123,7 +123,6 @@ body {
   background-color: var(--nav-bg-color);
   color: var(--text-color);
   text-align: center;
-  padding: 0.5em;
   font-size: 0.8em;
   border-top: 1px solid var(--border-color);
   position: fixed;
@@ -131,7 +130,54 @@ body {
   left: 0;
   right: 0;
   height: 2.5em;
+  z-index: 1001;
+  display: flex;
+  align-items: center;
+  padding: 0;
+  width: 100%;
 }
+
+.vs-code-icon-container {
+  position: relative;
+  width: 30px;
+  height: 100%;
+}
+
+.vs-code-icon {
+  position: absolute;
+  left: 0;
+  top: 0;
+  bottom: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100%; 
+  justify-content: space-between;
+  background-color: var(--border-color);
+  padding: 0 4px;
+  width: 100%;
+}
+
+.vs-code-icon i:first-child {
+  color: #ffffff;
+  font-size: 8px;
+  align-self: flex-start;
+  transform: translateY(15px) translateX(5px);
+}
+
+.vs-code-icon i:last-child {
+  color: #ffffff;
+  font-size: 8px;
+  align-self: flex-end;
+  transform: translateY(-10px) translateX(-7px);
+}
+
+.ide-footer p {
+  flex-grow: 1;
+  margin: 0;
+  padding: 0 10px;
+}
+
+
 
 section {
   margin-bottom: 2em;
