--- a/public/styles.css
+++ b/public/styles.css
@@ -13,7 +13,8 @@
   --icon-css: #1572B6;
   --icon-scss: #CD6799;
   --icon-js: #F7DF1E;
-  --icon-responsive: #61DAFB;
+  --icon-sql: #5979ae;
+  --icon-ng: #a31a13;
   --icon-email: #37b7ee;
   --icon-linkedin: #0077B5;
   --icon-github: #ffffff;
@@ -26,9 +27,8 @@
 }
 
 html {
-  scroll-behavior: smooth; /* Pour un défilement fluide */
+  scroll-behavior: smooth;
 }
-
 
 body {
   font-family: 'Consolas', 'Courier New', monospace;
@@ -38,14 +38,13 @@ body {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  
 }
 
 .ide-container {
   flex: 1;
   display: flex;
   flex-direction: column;
-  padding-bottom: 2.5em;
+  min-height: calc(100vh - 2.5em);
 }
 
 .explorer-menu {
@@ -113,11 +112,36 @@ body {
 
 .ide-main {
   flex: 1;
-  padding: 1em;
+  padding: 20px;
   overflow-y: auto;
+}
+
+.header-section {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  text-align: center;
+  width: 100%;
 }
+
+.header-section h3 {
+  align-self: flex-start;
+  width: 100%;
+  text-align: center;
+}
+
+.header-section h1 {
+  font-size: 2em;
+  margin: 0.2em 0;
+}
+
+.profile-image {
+  width: 100px;
+  height: auto;
+  border-radius: 50%;
+  margin-top: 1em;
+}
+
 
 .ide-footer {
   background-color: var(--nav-bg-color);
@@ -161,14 +185,14 @@ body {
   color: #ffffff;
   font-size: 8px;
   align-self: flex-start;
-  transform: translateY(15px) translateX(5px);
+  transform: translateY(13px) translateX(6px);
 }
 
 .vs-code-icon i:last-child {
   color: #ffffff;
   font-size: 8px;
   align-self: flex-end;
-  transform: translateY(-10px) translateX(-7px);
+  transform: translateY(-14px) translateX(-6px);
 }
 
 .ide-footer p {
@@ -177,17 +201,18 @@ body {
   padding: 0 10px;
 }
 
-
-
 section {
   margin-bottom: 2em;
   padding-top: 2em;
 }
 
+
+
 h2 {
   border-bottom: 1px solid var(--border-color);
   padding-bottom: 0.5em;
   margin-bottom: 1em;
+  text-align: center;
 }
 
 h1 {
@@ -199,24 +224,40 @@ ul {
 }   
 
 a { 
-    color: var(--text-color);
-    text-decoration: none;
+  color: var(--text-color);
+  text-decoration: none;
 }
-
 
 #skills ul li i {
   margin-right: 0.5rem;
+}
+
+#skills h3 { 
+    text-decoration: underline;
+    margin-bottom: 10px;
 }
 
 #skills ul li:nth-child(1) i { color: var(--icon-html); }
 #skills ul li:nth-child(2) i { color: var(--icon-css); }
 #skills ul li:nth-child(3) i { color: var(--icon-scss); }
 #skills ul li:nth-child(4) i { color: var(--icon-js); }
-#skills ul li:nth-child(5) i { color: var(--icon-responsive); }
-
-
+#skills ul li:nth-child(5) i { color: var(--icon-sql); }
+#skills ul li:nth-child(6) i { color: var(--icon-ng); }
 #contact p i {
   margin-right: 0.5em;
+}
+
+.oclock { 
+    text-decoration: underline;
+}
+
+.hs-container {
+  margin-bottom: 20px;  
+  text-align: center;
+}
+
+.ss-container {
+  text-align: center;
 }
 
 #contact a:hover {
@@ -227,7 +268,6 @@ a {
 #contact p:nth-child(3) i { color: var(--icon-linkedin); }
 #contact p:nth-child(4) i { color: var(--icon-github); }
 
-/* Responsive grand écran */
 @media (min-width: 48em) {
   .ide-container {
     flex-direction: row;
