--- a/public/styles.css
+++ b/public/styles.css
@@ -221,6 +221,7 @@ h1 {
 
 ul {
   list-style-type: none;
+  margin-top: 10px;
 }   
 
 a { 
@@ -234,7 +235,8 @@ a {
 
 #skills h3 { 
     text-decoration: underline;
-    margin-bottom: 10px;
+    margin-bottom: 20px;
+    margin-top: 20px;
 }
 
 #skills ul li:nth-child(1) i { color: var(--icon-html); }
@@ -243,6 +245,7 @@ a {
 #skills ul li:nth-child(4) i { color: var(--icon-js); }
 #skills ul li:nth-child(5) i { color: var(--icon-sql); }
 #skills ul li:nth-child(6) i { color: var(--icon-ng); }
+
 #contact p i {
   margin-right: 0.5em;
 }
@@ -250,6 +253,8 @@ a {
 .oclock { 
     text-decoration: underline;
 }
+
+
 
 .hs-container {
   margin-bottom: 20px;  
@@ -288,3 +293,33 @@ a {
     margin-left: 12.5em;
   }
 }
+
+
+@keyframes clickAnimation {
+  0%, 2%, 98%, 100% { 
+    transform: translate(0, 0) scale(1);
+    opacity: 0;
+  }
+  3%, 7% {
+    transform: translate(-20px, 2px) scale(0.95);
+    opacity: 1;
+  }
+  10%, 97% { 
+    transform: translate(0, 0) scale(1);
+    opacity: 0;
+  }
+}
+
+.oclock i {
+  display: inline-block;
+  animation: clickAnimation 7s ease-in-out infinite;
+}
+
+.oclock:hover i {
+  animation-play-state: static;
+  opacity: 1;
+}
+
+
+
+
