--- a/public/styles.css
+++ b/public/styles.css
@@ -452,6 +452,57 @@ a {
   color: var(--icon-github);
 }
 
+
+.social-share {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 20px;
+    align-items: center;
+}
+
+.share-btn {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+    padding: 5px ;
+    font-size: 0.8rem;
+    font-weight: bold;
+    border: none;
+    cursor: pointer;
+    border-radius: 30px;
+    transition: background 0.3s ease, transform 0.2s ease;
+    width: 80%;
+    max-width: 200px;
+    justify-content: center;
+    text-decoration: none !important;
+}
+
+.share-btn i {
+    font-size: 1.2rem;
+    
+}
+
+.linkedin {
+    background-color: var(--icon-linkedin);
+    color: white;
+}
+
+.linkedin:hover {
+    background-color: #005582;
+    transform: scale(1.05);
+}
+
+.facebook {
+    background-color: #1877f2;
+    color: white;
+}
+
+.facebook:hover {
+    background-color: #1259c3;
+    transform: scale(1.05);
+}
+
 .ide-footer {
   background-color: var(--nav-bg-color);
   color: var(--text-color);
@@ -609,6 +660,13 @@ a {
   #contact {
     margin-top: 100px;
   }
+  .social-share {
+    display: flex;
+    flex-direction: row;
+    justify-content: center; 
+    align-items: center;     
+}
+
 }
 
 
