--- a/public/styles.css
+++ b/public/styles.css
@@ -465,7 +465,7 @@ a {
     display: flex;
     align-items: center;
     gap: 10px;
-    padding: 5px ;
+    padding: 5px 15px;
     font-size: 0.8rem;
     font-weight: bold;
     border: none;
@@ -473,14 +473,13 @@ a {
     border-radius: 30px;
     transition: background 0.3s ease, transform 0.2s ease;
     width: 80%;
-    max-width: 200px;
+    max-width: 240px;
     justify-content: center;
     text-decoration: none !important;
 }
 
 .share-btn i {
     font-size: 1.2rem;
-    
 }
 
 .linkedin {
