--- a/public/styles.css
+++ b/public/styles.css
@@ -34,9 +34,9 @@
   box-sizing: border-box;
 }
 
-/* html {
+html {
   scroll-behavior: smooth;
-} */
+}
 
 body {
   font-family: "Consolas", "Courier New", monospace;
