--- a/public/styles.css
+++ b/public/styles.css
@@ -9,6 +9,7 @@
   --icon-skills: #12dd2d;
   --icon-projects: #256cb2;
   --icon-contact: #f05033;
+  --icon-lightbulb: #f9c47f;
   --icon-html: #e34f26;
   --icon-css: #1572b6;
   --icon-scss: #cd6799;
@@ -134,6 +135,9 @@ body {
 }
 .ide-nav li:nth-child(4) i {
   color: var(--icon-contact);
+}
+.ide-nav li:nth-child(5) i {
+  color: var(--icon-lightbulb);
 }
 
 .projects-dropdown {
@@ -601,7 +605,7 @@ a {
 }
 
 #lighthouse p {
-    font-size: 1.1em;
+    font-size: 1em;
     color: white;
     line-height: 1.6;
     margin-bottom: 30px;
@@ -647,8 +651,14 @@ a {
 }
 
 .cookie-banner::before {
-  content: '🍪';
-  font-size: 2.5em;
+  content: '';
+  display: block;
+  width: 100px;
+  height: 100px;
+  background-image: url('./assets/monster.webp');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
   margin-bottom: 10px;
 }
 
