test gif cookie

--- a/public/styles.css
+++ b/public/styles.css
@@ -655,7 +655,7 @@ a {
   display: block;
   width: 100px;
   height: 100px;
-  background-image: url('./assets/monster.webp');
+  background-image: url('./assets/monsterez.gif');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
