--- a/public/styles.css
+++ b/public/styles.css
@@ -627,17 +627,17 @@ a {
 
 .cookie-banner {
   position: fixed;
-  bottom: 32px; 
+  bottom: 350px; 
   left: 50%;
   transform: translateX(-50%); 
-  max-width: 400px;
+  max-width: 300px;
   width: 90%;
   color: #181717;
-  background: #fff;
-  padding: 20px;
+  background: linear-gradient(to right, #8ca899, #edf0f1);
+  padding: 25px;
   text-align: center;
   z-index: 9000;
-  border-radius: 15px;
+  border-radius: 20px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -652,7 +652,7 @@ a {
 .cookie-banner::before {
   content: '';
   display: block;
-  border-radius: 50px;
+  border-radius: 60px;
   width: 100px;
   height: 100px;
   background-image: url('./assets/monsterez.gif');
@@ -684,7 +684,7 @@ a {
 
 .close-btn {
   position: absolute;
-  top: 10px;
+  top: 0px;
   right: 10px;
   font-size: 1.5em;
   cursor: pointer;
@@ -772,7 +772,13 @@ a {
     flex-direction: row;
     justify-content: center; 
     align-items: center;     
-}
+  }
+
+  .cookie-banner {
+    bottom: 180px;
+    left: 56%;
+    max-width: 800px;  
+  }
 
 }
 
